--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,9 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        //compile fileTree(dir: 'libs', include: ['*.jar'])
         classpath 'com.android.tools.build:gradle:1.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -15,6 +14,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
     }
 }
