--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-            compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:support-v4:22.0.0'
+    compile files('libs/gdx.jar')
 }
