--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.missvaleska.cardboardonpc" >
+    package="com.cardboard.missvaleska.cardboardonpc" >
 
-<uses-permission android:name="android.permission.NFC" />
-<uses-permission android:name="android.permission.VIBRATE" />
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".FullscreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
-<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
-<application
-android:allowBackup="true"
-android:icon="@drawable/ic_launcher"
-android:label="@string/app_name" >
-
-<activity
-    android:name=".MainActivity"
-    android:label="@string/app_name"
-    android:screenOrientation="landscape"
-    android:configChanges="orientation|keyboardHidden|screenSize" >
-    <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-        <category android:name="com.google.intent.category.CARDBOARD" />
-    </intent-filter>
-</activity>
-</application>
-
-    </manifest>
+</manifest>
