--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,11 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+
+        sourceSets.main {
+            jniLibs.srcDir 'libs' // <-- Set your folder here!
+        }
+
     }
     buildTypes {
         release {
