--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
      android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-     android:maxSdkVersion="18" />
+     android:minSdkVersion="19" />
 
     <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"/>
     <uses-feature android:name="android.hardware.sensor.gyroscope" android:required="true"/>
@@ -25,6 +25,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ViewStreamActivity"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"
+            >
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".FullscreenActivity"
+                />
+
         </activity>
     </application>
 
